fix add vols alignment

--- a/app/assets/stylesheets/components/_vol_roster_form.scss
+++ b/app/assets/stylesheets/components/_vol_roster_form.scss
@@ -24,10 +24,9 @@
 }
 
 .display-roster-section {
-  // height: 70vh;
+  height: 70vh;
   flex: 1 1 60%;
   margin: 10px;
-  padding: 10px;
 }
 
 .display-roster-results {
